resolved fdo#68437 append the bDetectSpecialNumber "true" string in options

Regression introduced with 465dbaecf9890b7117a45d02ea982ef7aca32720

Change-Id: I7c05c7f246dddd0271c421aa358068365d44fb98
(cherry picked from commit aaa1bc40bb197968946c39d4c31c13588191bf55)